# xml_parser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  test.cpp  xml_parser.cpp  xml_parser.h
.github/workflows/: cmake.yml  meson.yml
include/xml_parser/: parser.h  xml_parser.h
source/: parser.cpp  xml_parser.cpp
testing/: test_suite.cpp
